Little alignment fix

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -81,6 +81,10 @@ section+section {
 
 .cta {
   margin: 30px 0;
+  
+  & a {
+    text-align: center;
+  }
 }
 
 blockquote {
